methods.picture.MethodsPicture.scala.error
Compilation error:
MethodsPicture:33: error: not found: value setColorBrosse
  setColorBrosse(); faireV();
  ^